deploy: 18632a1fc6b057645acc43febb940db9a8694125

--- a/catagories/index.html
+++ b/catagories/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Categories</title>
+  <title>Catagories</title>
   <meta name="description" content="CyberForge – Auto-updating hacker vault.">
   
   
-  <meta property="og:title" content="Categories">
+  <meta property="og:title" content="Catagories">
   <meta property="og:description" content="">
   <meta property="og:image" content="">
-  <meta property="og:url" content="https://cyberform.org/categories/">
+  <meta property="og:url" content="https://cyberform.org/catagories/">
   <meta name="twitter:card" content="summary_large_image">
   
   <link rel="stylesheet" href="/style.css">
@@ -32,8 +32,8 @@
 
   <main>
     
-<h2>Categories</h2>
-<ul>
+<h1>Categories</h1>
+<ul class="category-list">
   
 </ul>
 
